﻿04/21/2016 1.0.0.5 - Beta
  Fixes #303: A.C.T. result slot can no longer dupe items.
  Fixed issue of A.C.T. result slot improperly handling right clicks, issue was with underlying inventory, as it allowed 'partial' crafting results to be taken.

04/18/2016 1.0.0.5 - Beta
  Refactored the essentia grid cache

04/17/2016 1.0.0.5 - Beta
  Fixed #281: Essentia terminal no longer overlayed by NEI at certain aspect ratios.

04/17/2016 1.0.0.4 - Beta
  Fixes #300 and #282: Microblock compatibility added.
  Fixes #293: Added missing redstone method to level emitter.
  Craftable essentia no longer shows in item terminals.
  Texture updated: Level Emitter
  Applied new formatting rules to entire project.

04/15/2016 1.0.0.4 - Beta
  Cleaned up ASM transformer code.  

04/14/2016 1.0.0.3 - Beta
  Completely moved dev environment to Java 8, Java 7 and earlier is no longer supported.
  Updated forge to 10.13.4.1566
  Fixes #294: Wand move targets for shift+click changed to favor player inventory over ME storage.
  Fixes #289: Only AE2 items have aspects applied.
  Fixes #299: Assembler no longer eats pearls.

01/30/2016 1.0.0.2 - Beta
  Fixes #270: Restored Java 7 compatibility.

01/26/2016 1.0.0.2 - Beta
  Fixed potential memory leak on networks with essentia monitor listeners.
  Added mod identification to aspects in the Essentia Crafting Terminal.

01/25/2016 1.0.0.2 - Beta
  Fixes #268: Getting an item tooltip in the A.C.T. is now a checked operation.

01/24/2016 1.0.0.1 - Beta
  Fixes #267: Wildcard damage values will no longer cause GUI crashes.
  Added Thaumcraft's itemShard to the ore dictionary, allowing autocrafting substitutions where allowed.

01/23/2016 1.0.0.0 - Beta
  Fixed SMP packet crash.
  Fixed potential golem hook crash.
  Added levels of interaction.
  Added golem backpack skins.

01/22/2016 1.0.0.0 - Beta
  Bumped version to 1.0.0.0
  Fixes #213: Added backpack lore and recipe.
  Added backpack config option.
  Updated mod info file.